Fix bug of overlap between sidebar and menu dropdown

--- a/src/css/np-help.css
+++ b/src/css/np-help.css
@@ -37,7 +37,9 @@ body {
 /* Hide for mobile, show later */
 .sidebar {
   display: none;
+  z-index: 999;
 }
+
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
